# notify-bridge

./: .gitignore  PROTOCOL.md  README.md
host/: Cargo.toml
host/src/: main.rs
nix/: home-module.nix  package.nix
windows-agent/: NotifyBridgeAgent.csproj  Program.cs  build-msix.ps1  config.example.json  register-task.ps1  send-test-toast.ps1
windows-agent/Package/: AppxManifest.xml
